# ranzo2

./: .env.example  Makefile  docker-compose.yml  package-lock.json  patch_bookings.py  patch_tech_dashboard.py  run.sh  test_create.py  token.json
Frontend/: .gitignore  README.md  app.config.ts  app.json  package-lock.json  package.json  react-native-jsx-fix.d.ts  tsconfig.json  typecheck_output.txt
Frontend/app/: _layout.tsx  home.tsx  index.tsx  profile-details.tsx  profile-setup.tsx  profile-summary.tsx
Frontend/data/: models.ts  otpLoginDraft.ts  registrationDraft.ts  storage.ts
Frontend/patches/: @expo+ngrok+4.1.3.patch
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  main.py  phase2.md  pyproject.toml  requirements.txt  test_db.py  test_db2.py  workflow.md
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  admin_stubs.py  auth.py  bookings.py  jobs.py  profiles.py  reviews.py  router.py  upload.py  users.py  wallet.py
backend/app/core/: config.py  database.py  geo.py  redis.py  security.py
backend/app/models/: booking.py  job.py  otp.py  review.py  user.py  wallet.py
backend/app/schemas/: auth.py  booking.py  enums.py  job.py  profile.py  review.py  user.py
backend/app/services/: audit.py  matchmaking.py  otp_service.py  sse_manager.py  user_service.py
backend/app/tasks/: autocomplete_reviews.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_auth.py  test_profiles.py
ranzo-admin/: .env  Dockerfile  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+93 files in other folders)
